<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recyclerview_countries"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutManager="LinearLayoutManager"
    tools:context=".ui.details.DetailsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/image_slider"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:iss_auto_cycle="true"
        app:iss_period="1000"
        app:iss_delay="0"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/size"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/text_margin_20dp"
        />
<Button
    android:id="@+id/watchTrailer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/watch"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="@dimen/text_margin_20dp"
    android:layout_marginLeft="@dimen/margin_50dp"
    android:layout_marginRight="@dimen/margin_50dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genres"
        android:textSize="@dimen/activity_vertical_margin"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/textview_size_small"
        android:layout_marginTop="@dimen/textview_size_small"
        />
    <TextView
        android:id="@+id/genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/activity_vertical_margin"
        android:textColor="@android:color/black"
        android:layout_marginLeft="@dimen/textview_size_small"
        android:layout_marginTop="@dimen/textview_size_small"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dates"
        android:textSize="@dimen/activity_vertical_margin"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/textview_size_small"
        android:layout_marginTop="@dimen/textview_size_small"

        />
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="left"
        android:textSize="@dimen/activity_vertical_margin"
        android:textColor="@android:color/black"
        android:layout_marginLeft="@dimen/textview_size_small"
        android:layout_marginTop="@dimen/textview_size_small"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textSize="@dimen/activity_vertical_margin"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/textview_size_small"
        android:layout_marginTop="@dimen/textview_size_small"

        />
    <TextView
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="left"
        android:textSize="@dimen/activity_vertical_margin"
        android:textColor="@android:color/black"
        android:layout_marginLeft="@dimen/textview_size_small"
        android:layout_marginTop="@dimen/textview_size_small"
        />
</LinearLayout>
</ScrollView>
